pre chcecking if word correct no previous error when not in same row/column